--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:id="@+id/textViewPr"
         android:layout_alignParentEnd="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:layout_alignStart="@+id/imageButton" />
+        android:layout_alignStart="@+id/AddButton" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -29,8 +29,9 @@
         app:srcCompat="@android:drawable/ic_input_add"
         android:layout_marginStart="38dp"
         android:layout_marginTop="62dp"
-        android:id="@+id/imageButton"
+        android:id="@+id/AddButton"
         android:layout_below="@+id/textViewPr"
+        android:onClick="CliqueAddButton"
         android:layout_alignParentStart="true" />
 
     <ImageButton
@@ -38,8 +39,8 @@
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_menu_edit"
         android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/imageButton"
-        android:id="@+id/imageButton2" />
+        android:layout_alignStart="@+id/AddButton"
+        android:id="@+id/ListeButton" />
 
     <TextView
         android:text="@string/TextviewAdd"
@@ -47,9 +48,9 @@
         android:layout_height="111dp"
         android:id="@+id/textViewAdd"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/imageButton"
-        android:layout_alignBottom="@+id/imageButton"
-        android:layout_alignTop="@+id/imageButton"
+        android:layout_toEndOf="@+id/AddButton"
+        android:layout_alignBottom="@+id/AddButton"
+        android:layout_alignTop="@+id/AddButton"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <TextView
@@ -57,10 +58,10 @@
         android:layout_width="match_parent"
         android:layout_height="111dp"
         android:id="@+id/textViewListe"
-        android:layout_alignTop="@+id/imageButton2"
+        android:layout_alignTop="@+id/ListeButton"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/imageButton2"
-        android:layout_alignBottom="@+id/imageButton2"
+        android:layout_toEndOf="@+id/ListeButton"
+        android:layout_alignBottom="@+id/ListeButton"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <ImageView
